[gd_scene load_steps=14 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://client/settings/settings.gd" type="Script" id=2]
[ext_resource path="res://fonts/prototype/dynamic_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://main_menu.gd" type="Script" id=4]
[ext_resource path="res://icons/cross.png" type="Texture" id=5]
[ext_resource path="res://lobby.gd" type="Script" id=6]
[ext_resource path="res://authentication.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.345098, 0.415686, 0.694118, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.294118, 0.584314, 1, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 2
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.160784, 0.219608, 0.4, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.301961, 0.298039, 0.568627, 1 )
border_blend = true
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 4
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 2
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Content Margin", "Expand Margin", "Resource", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.211765, 0.392157, 0.572549, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.262745, 0.494118, 0.768627, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 4
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 2
anti_aliasing = true
anti_aliasing_size = 2
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Content Margin", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.337255, 0.403922, 0.631373, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.184314, 0.27451, 0.517647, 1 )
border_blend = true
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width" ]

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.215686, 0.239216, 0.368627, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.298039, 0.392157, 1, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="Theme" id=6]

default_font = ExtResource( 3 )
_sections_unfolded = [ "default_font" ]

[node name="client" type="Node" index="0"]
script = ExtResource( 1 )

[node name="settings" type="Node" parent="." index="0"]
script = ExtResource( 2 )

[node name="network" type="Node" parent="." index="1"]

[node name="gui" type="Button" parent="." index="2"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -150.0
margin_right = 51.0
margin_bottom = -121.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 13
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0.72549, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.243137, 1 )
custom_constants/hseparation = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "System"
flat = false
align = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Anchor", "Custom Colors", "Custom Constants", "Custom Fonts", "Custom Styles", "Hint", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_fonts/font", "custom_styles/hover", "custom_styles/normal", "custom_styles/pressed" ]

[node name="close_menu" type="Button" parent="gui" index="0"]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_right = 56.0
margin_bottom = 58.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.164706, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.243137, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Custom Colors", "Custom Constants", "Custom Fonts", "Custom Styles", "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Size Flags", "Theme", "Visibility", "custom_fonts/font", "custom_styles/hover", "custom_styles/normal", "custom_styles/pressed", "theme" ]

[node name="main_menu" type="Panel" parent="gui" index="1"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 30.0
margin_right = 106.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panelf = SubResource( 4 )
custom_styles/panel = SubResource( 5 )
_sections_unfolded = [ "Custom Styles", "Material", "Theme", "Visibility", "custom_styles/panel", "custom_styles/panelf" ]

[node name="play" type="Button" parent="gui/main_menu" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 12.0
margin_right = 91.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0.72549, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.243137, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "Custom Colors", "Custom Fonts", "Custom Styles", "Hint", "Mouse", "Rect", "Visibility", "custom_fonts/font", "custom_styles/hover", "custom_styles/normal", "custom_styles/pressed" ]

[node name="tutorial" type="Button" parent="gui/main_menu" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 47.0
margin_right = 91.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0.72549, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.243137, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Tutorial"
flat = false
align = 1
_sections_unfolded = [ "Custom Colors", "Custom Fonts", "Custom Styles", "Hint", "Mouse", "Rect", "Visibility", "custom_fonts/font", "custom_styles/hover", "custom_styles/normal", "custom_styles/pressed" ]

[node name="settings" type="Button" parent="gui/main_menu" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 82.0
margin_right = 91.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0.72549, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.243137, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Settings"
flat = false
align = 1
_sections_unfolded = [ "Custom Colors", "Custom Fonts", "Custom Styles", "Hint", "Mouse", "Rect", "Visibility", "custom_fonts/font", "custom_styles/hover", "custom_styles/normal", "custom_styles/pressed" ]

[node name="quit" type="Button" parent="gui/main_menu" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 117.0
margin_right = 91.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0.72549, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.243137, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Custom Colors", "Custom Fonts", "Custom Styles", "Hint", "Mouse", "Rect", "Visibility", "custom_fonts/font", "custom_styles/hover", "custom_styles/normal", "custom_styles/pressed" ]

[node name="title" type="Label" parent="gui/main_menu" index="4"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 90.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0.368627, 0.690196, 1, 1 )
custom_colors/font_color_shadow = Color( 0.439216, 0.513726, 1, 1 )
text = "Main Menu"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Colors", "Custom Fonts" ]

[node name="connect" type="Panel" parent="gui" index="2"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_top = 30.0
margin_right = 473.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panelf = SubResource( 4 )
custom_styles/panel = SubResource( 5 )
_sections_unfolded = [ "Custom Styles", "Material", "Theme", "Visibility", "custom_styles/panel", "custom_styles/panelf" ]

[node name="connect" type="Button" parent="gui/connect" index="0"]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 15.0
margin_top = 35.0
margin_right = 142.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0.72549, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.243137, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Connect"
flat = false
align = 1
_sections_unfolded = [ "Custom Colors", "Custom Fonts", "Custom Styles", "Hint", "Mouse", "Rect", "Visibility", "custom_fonts/font", "custom_styles/hover", "custom_styles/normal", "custom_styles/pressed" ]

[node name="title" type="Label" parent="gui/connect" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0.368627, 0.690196, 1, 1 )
custom_colors/font_color_shadow = Color( 0.439216, 0.513726, 1, 1 )
text = "Network Options"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Colors", "Custom Fonts" ]

[node name="server_selector" type="OptionButton" parent="gui/connect" index="2"]
self_modulate = Color( 0.674438, 0.863281, 0.858855, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 31.4
margin_top = 51.4
margin_right = 193.4
margin_bottom = 80.4
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 6 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cloud Server"
flat = false
align = 1
items = [ "Cloud Server", null, false, 0, null, "Local Server", null, false, 1, null, "Advanced", null, false, 2, null ]
selected = 0
_sections_unfolded = [ "Theme" ]

[node name="address" type="LineEdit" parent="gui/connect" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 161.6
margin_top = 116.2
margin_right = 306.6
margin_bottom = 146.2
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 6 )
text = "35.196.153.143"
align = 1
secret_character = "*"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="port" type="LineEdit" parent="gui/connect" index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 294.4
margin_top = 115.4
margin_right = 364.4
margin_bottom = 145.4
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 6 )
text = "2934"
align = 1
secret_character = "*"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="username" type="LineEdit" parent="gui/connect" index="5"]
self_modulate = Color( 0.674438, 0.863281, 0.858855, 1 )
light_mask = 0
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -155.0
margin_top = 54.0
margin_right = -29.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 6 )
max_length = 15
secret_character = "*"
focus_mode = 2
context_menu_enabled = false
placeholder_text = "  username"
placeholder_alpha = 1.0
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="password" type="LineEdit" parent="gui/connect" index="6"]
self_modulate = Color( 0.674438, 0.863281, 0.858855, 1 )
light_mask = 0
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 84.2
margin_top = 18.6
margin_right = 216.2
margin_bottom = 50.6
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 6 )
max_length = 15
secret = true
secret_character = "*"
focus_mode = 2
context_menu_enabled = false
placeholder_text = "  password"
placeholder_alpha = 1.0
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Theme" ]

[node name="join" type="Button" parent="gui/connect" index="7"]
self_modulate = Color( 0.909804, 0.909804, 0.909804, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 281.8
margin_top = 81.8
margin_right = 386.8
margin_bottom = 107.8
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Connect"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "Visibility", "custom_fonts" ]

[node name="status_ok" type="Label" parent="gui/connect" index="8"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -239.2
margin_top = 196.2
margin_right = 403.8
margin_bottom = 221.2
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = SubResource( 6 )
text = "Enter an unclaimed username to register with server"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="status_fail" type="Label" parent="gui/connect" index="9"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -240.0
margin_top = 193.8
margin_right = 413.0
margin_bottom = 218.8
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = SubResource( 6 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lobby" type="Control" parent="gui/connect" index="10" groups=[
"lobby",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -786.5
margin_top = -325.0
margin_right = -746.5
margin_bottom = -285.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 2
theme = SubResource( 6 )
script = ExtResource( 6 )
_sections_unfolded = [ "Anchor", "Focus", "Hint", "Margin", "Rect", "Size Flags", "Theme" ]

[node name="authentication" type="Node" parent="gui/connect/lobby" index="0"]
script = ExtResource( 7 )

[connection signal="gui_input" from="gui" to="gui" method="_on_menu_gui_input"]
[connection signal="pressed" from="gui" to="gui" method="_on_menu_pressed"]
[connection signal="gui_input" from="gui/close_menu" to="gui" method="_on_close_menu_gui_input"]
[connection signal="pressed" from="gui/main_menu/play" to="gui" method="_on_play_pressed"]
[connection signal="pressed" from="gui/main_menu/tutorial" to="gui" method="_on_play_pressed"]
[connection signal="pressed" from="gui/main_menu/settings" to="gui" method="_on_settings_pressed"]
[connection signal="pressed" from="gui/main_menu/quit" to="gui" method="_on_quit_pressed"]
[connection signal="item_selected" from="gui/connect/server_selector" to="gui/connect/lobby" method="_on_server_selector_item_selected"]
[connection signal="pressed" from="gui/connect/join" to="gui/connect/lobby" method="_on_join_pressed"]
